Bug 331347 - scRGB + 16 bit integer makes Krita work *really* slow
Summary: scRGB + 16 bit integer makes Krita work *really* slow
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Color models (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-20 18:18 UTC by Dmitry Kazakov
Modified: 2014-02-22 05:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitry Kazakov 2014-02-20 18:18:45 UTC
Just try painting with a 100px brush :)

sRGB, Adobe RGB and other profiles work ok with 16bit-int, but scRGB alone doesn't :(
Comment 1 Dmitry Kazakov 2014-02-20 18:40:24 UTC
Happens with the openGL canvas only.
Comment 2 Dmitry Kazakov 2014-02-20 19:07:48 UTC
Git commit d97b77ea4e96b29cc74eab1ca49db8cf2cdfecd7 by Dmitry Kazakov.
Committed on 20/02/2014 at 19:07.
Pushed by dkazakov into branch 'master'.

Move the cs-conversion of the openGL texture tile into the scheduler thread

Otherwise it blocks the UI on conversions of some complex color
spaces like scRGB 16 bit integer.

M  +4    -3    krita/ui/opengl/kis_opengl_image_textures.cpp

http://commits.kde.org/calligra/d97b77ea4e96b29cc74eab1ca49db8cf2cdfecd7
Comment 3 Dmitry Kazakov 2014-02-22 05:07:31 UTC
Git commit 6b3007e3e2669f813bfd9478fa6c4fc6e5575602 by Dmitry Kazakov.
Committed on 20/02/2014 at 19:07.
Pushed by dkazakov into branch 'calligra/2.8'.

Move the cs-conversion of the openGL texture tile into the scheduler thread

Otherwise it blocks the UI on conversions of some complex color
spaces like scRGB 16 bit integer.

M  +4    -3    krita/ui/opengl/kis_opengl_image_textures.cpp

http://commits.kde.org/calligra/6b3007e3e2669f813bfd9478fa6c4fc6e5575602