Move the cs-conversion of the openGL texture tile into the scheduler thread

Otherwise it blocks the UI on conversions of some complex color
spaces like scRGB 16 bit integer.

BUG:331347